# gr5069-homework-2-ivster

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  mds_final_vignette.ipynb
dist 11.06.38 AM/: seatgeekpkg-0.1.0-py3-none-any.whl  seatgeekpkg-0.1.1-py3-none-any.whl  seatgeekpkg-0.1.2-py3-none-any.whl
docs 11.06.38 AM/: Makefile  conf.py  example.ipynb  make.bat
docs 11.06.38 AM/_build/doctrees/: changelog.doctree  conduct.doctree  contributing.doctree  environment.pickle  example.doctree  index.doctree
docs 11.06.38 AM/_build/doctrees/autoapi/: index.doctree
docs 11.06.38 AM/_build/doctrees/autoapi/seatgeekpkg/: index.doctree
docs 11.06.38 AM/_build/doctrees/autoapi/seatgeekpkg/seatgeekpkg/: index.doctree
docs 11.06.38 AM/_build/html/: .buildinfo  changelog.html  conduct.html  contributing.html  example.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs 11.06.38 AM/_build/html/_sources/autoapi/: index.rst.txt
docs 11.06.38 AM/_build/html/_sources/autoapi/seatgeekpkg/: index.rst.txt
docs 11.06.38 AM/_build/html/_sources/autoapi/seatgeekpkg/seatgeekpkg/: index.rst.txt
docs 11.06.38 AM/_build/html/autoapi/: index.html
docs 11.06.38 AM/_build/html/autoapi/seatgeekpkg/: index.html
docs 11.06.38 AM/_build/html/autoapi/seatgeekpkg/seatgeekpkg/: index.html
docs 11.06.38 AM/_build/jupyter_execute/: example.ipynb
src/seatgeekpkg/: seatgeekpkg.py
tests 11.06.38 AM/: test_seatgeekpkg.py
untitled folder/: pyproject.toml
